--- a/FullStack-Todo-App/Backend/package.json
+++ b/FullStack-Todo-App/Backend/package.json
@@ -7,7 +7,6 @@
   ],
   "license": "ISC",
   "author": "Manish Kumar",
-  
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -16,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
